bg-image and map

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,27 @@
-<div>
-  <span>PRUEBA</span>
+<div id="app">
+  <div id="bg">
+    <img id="bg-image" src="../assets/pattern-bg.png" alt="bg-image">
+  </div>
+  <div id="map"></div>
+</div>
+
+<div id="ip-tracker-container">
+  <h1>IP Address Tracker</h1>
+  <form>
+    <input type="text">
+  </form>
+  <div id="info">
+    <div id="ip-address">
+      <span>IP ADDRESS</span>
+    </div>
+    <div id="location">
+      <span>LOCATION</span>
+    </div>
+    <div id="timezone">
+      <span>TIMEZONE</span>
+    </div>
+    <div id="isp">
+      <span>ISP</span>
+    </div>
+  </div>
 </div>
