--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,20 +8,24 @@
 <div id="ip-tracker-container">
   <h1>IP Address Tracker</h1>
   <form>
-    <input type="text">
+    <input type="text" placeholder="Search for any IP address or domain">
   </form>
   <div id="info">
     <div id="ip-address">
       <span>IP ADDRESS</span>
+      <p>192.212.174.101</p>
     </div>
     <div id="location">
       <span>LOCATION</span>
+      <p>Brooklyn, NY 10001</p>
     </div>
     <div id="timezone">
       <span>TIMEZONE</span>
+      <p>UTC -05:00</p>
     </div>
     <div id="isp">
       <span>ISP</span>
+      <p>SpaceX Stralink</p>
     </div>
   </div>
 </div>
