--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -56,7 +56,6 @@ input::placeholder {
     top: 0;
     left: 0;
     right: 0;
-    bottom: 0;
     text-align: center;
     padding-top: 4em;
     z-index: 999;
@@ -64,7 +63,7 @@ input::placeholder {
 
 #info {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     background-color: white;
     width: 70%;
     margin-top: 40px;
@@ -76,7 +75,7 @@ input::placeholder {
     text-align: left;
 }
 
-#info div:not(:first-child) {
-    padding-left: 5em;
-    border-left: 1px solid hsl(0, 0%, 59%);
+#info div:not(:last-child) {
+    padding-right: 5em;
+    border-right: 1px solid hsl(0, 0%, 59%);
 }
