--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -19,12 +19,19 @@ p {
 input {
     min-width: 300px;
     padding: .5em 0 .5em 1em;
-    border-radius: 10px;
+    border-radius: 10px 0 0 10px;
 }
 
 input::placeholder {
     font-family: 'Rubik', sans-serif;
     font-weight: 500;    
+}
+
+button {
+    color: white;
+    background-color: black;
+    border-radius: 0 10px 10px 0;
+    padding: .5em 1em;
 }
 
 #bg-image {
