--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
       type="text"
       name="ip" 
       class="form-control"
-      placeholder="Search for any IP address or domain"
+      placeholder="Search for any IP address"
       ngModel
       required>
     <button type="submit">></button>
