check if input is an IP address

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
 
 <div id="ip-tracker-container">
   <h1>IP Address Tracker</h1>
+  <p class="error" *ngIf="inputError">Input entered is not an IP address</p>
   <form #ipAddress="ngForm" (ngSubmit)="getInfoFromIp(ipAddress)">
     <input
       #ip="ngModel" 
